--- a/src/games/memory_game/memoryGame.html
+++ b/src/games/memory_game/memoryGame.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -15,9 +15,7 @@
   </head>
   <body>
     <nav>
-      <!-- <i class="fa-solid fa-brain"></i> -->
       <p><span>Memory</span> Game</p>
-      <!-- <i class="fa-solid fa-star"></i> -->
     </nav>
     <div id="settings-cont">
       <i id="settings-btn" class="fa-solid fa-gear"></i>
@@ -35,6 +33,32 @@
       <button id="start">Start Game</button>
     </div>
     <div id="game-play-ui">
+      <div id="game-info">
+        <div class="info-cont" id="time-cont">
+          <div class="text-info">
+            <div class="time-content" id="elapsed-time">
+              <i class="fa-regular fa-clock"></i>
+              <p>Time Elapsed</p>
+              <p class="time">00:00</p>
+            </div>
+            <div class="time-content" id="time-left">
+              <i class="fa-regular fa-clock"></i>
+              <p>Time Left</p>
+              <p class="time">00:00</p>
+            </div>
+          </div>
+          <div class="progress">
+            <span></span>
+          </div>
+        </div>
+        <div class="info-cont" id="lives-cont">
+          <div class="lives-content">
+            <p>Lives</p>
+            <i class="fa-solid fa-heart"></i>
+            <p id="lives-count">x5</p>
+          </div>
+        </div>
+      </div>
       <div id="game-grid"></div>
     </div>
     <script src="./js/script.js"></script>
