logic_without_settings

--- a/src/games/memory_game/memoryGame.html
+++ b/src/games/memory_game/memoryGame.html
@@ -55,12 +55,64 @@
           <div class="lives-content">
             <p>Lives</p>
             <i class="fa-solid fa-heart"></i>
-            <p id="lives-count">x5</p>
+            <p id="lives-count">x0</p>
           </div>
         </div>
       </div>
       <div id="game-grid"></div>
+      <div id="game-end" class="hide">
+        <div class="game-end-bg">
+          <div id="game-end-icon-cont">
+            <i class="fa-regular fa-face-frown"></i>
+          </div>
+          <p id="game-end-title">Game Over</p>
+          <p id="game-end-msg">Better Luck Next Time</p>
+          <div id="game-end-info-row">
+            <div class="game-end-info-item-cont" id="game-end-time">
+              <i class="fa-regular fa-clock"></i>
+              <p class="game-end-val">00:00</p>
+              <p class="game-end-label">Time</p>
+            </div>
+            <div class="game-end-info-item-cont" id="game-end-mistakes">
+              <i class="fa-regular fa-circle-xmark"></i>
+              <p class="game-end-val">0</p>
+              <p class="game-end-label">Mistakes</p>
+            </div>
+            <div class="game-end-info-item-cont" id="game-end-score">
+              <i class="fa-solid fa-trophy"></i>
+              <p class="game-end-val">0</p>
+              <p class="game-end-label">Score</p>
+            </div>
+          </div>
+          <button id="play-again">
+            <i class="fa-solid fa-rotate-right"></i>
+            Play Again
+          </button>
+        </div>
+      </div>
     </div>
-    <script src="./js/script.js"></script>
+    <div id="settings-dialog-bg">
+      <div id="settings-dialog">
+        <div class="settings-input-title">
+          <i class="fa-solid fa-table-cells"></i>
+          <p>Grid Size</p>
+        </div>
+        <div id="grid-options-row">
+          <span value="2">2x2</span>
+          <span value="4">4x4</span>
+          <span value="6">6x6</span>
+        </div>
+        <div class="settings-input-title">
+          <i class="fa-regular fa-clock"></i>
+          <p>Time Limit</p>
+        </div>
+        <input type="range" />
+        <div class="settings-input-title">
+          <i class="fa-regular fa-heart"></i>
+          <p>Lives</p>
+        </div>
+      </div>
+    </div>
+    <script src="./js/script.js" type="module"></script>
   </body>
 </html>
