--- a/src/games/memory_game/memoryGame.html
+++ b/src/games/memory_game/memoryGame.html
@@ -121,25 +121,9 @@
       </div>
     </div>
 
-    <div id="leader-dialog-bg" class="dialog-bg">
+    <div id="leader-dialog-bg" class="dialog-bg hide">
       <div id="leader-dialog" class="dialog">
         <button id="close-leader" class="close-dialog">x</button>
-        <div class="leader-entry">
-          <div class="leader-user-cont">
-            <p class="leader-user">Guest</p>
-            <p class="leader-date leader-sec-text">13/06/2003</p>
-            <p class="leader-grid-size leader-sec-text">2</p>
-          </div>
-          <div class="leader-sec-text">
-            <i class="fa-regular fa-clock"></i>
-            <p class="leader-time-taken">00:02</p>
-          </div>
-          <div class="leader-sec-text">
-            <i class="fa-regular fa-circle-xmark"></i>
-            <p class="leader-mistakes">2</p>
-          </div>
-          <p class="leader-score">13</p>
-        </div>
       </div>
     </div>
 
