--- a/src/games/memory_game/memoryGame.html
+++ b/src/games/memory_game/memoryGame.html
@@ -96,7 +96,9 @@
     </div>
     <div id="settings-dialog-bg" class="dialog-bg hide">
       <div id="settings-dialog" class="dialog">
-        <button id="close-settings" class="close-dialog">x</button>
+        <button id="close-settings" class="close-dialog">
+          <i class="fa-regular fa-circle-xmark"></i>
+        </button>
         <div class="settings-input-title">
           <i class="fa-solid fa-table-cells"></i>
           <p>Grid Size</p>
@@ -118,12 +120,16 @@
           <p class="settings-row-value">5</p>
         </div>
         <input type="range" id="lives-input" min="1" max="100" value="100" />
+        <button id="add-user-img">Add Image</button>
+        <div id="user-img-collection-cont"></div>
       </div>
     </div>
 
     <div id="leader-dialog-bg" class="dialog-bg hide">
       <div id="leader-dialog" class="dialog">
-        <button id="close-leader" class="close-dialog">x</button>
+        <button id="close-leader" class="close-dialog">
+          <i class="fa-regular fa-circle-xmark"></i>
+        </button>
       </div>
     </div>
 
