--- a/src/games/memory_game/memoryGame.html
+++ b/src/games/memory_game/memoryGame.html
@@ -133,6 +133,12 @@
       </div>
     </div>
 
+    <div class="home-link">
+      <a href="../../../index.html" aria-label="Back to Games"
+        >← Back to Games</a
+      >
+    </div>
+
     <script src="./js/script.js" type="module"></script>
     <script src="./js/game-data.js" type="module"></script>
     <script src="./js/listeners.js" type="module"></script>
