sound_effects+general_fix

--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
             </div>
           </a>
 
+          <a
+            class="game-card"
+            id="random-game"
+            role="listitem"
+            aria-describedby="memory-desc"
+          >
+            <div class="game-icon">🔀</div>
+            <div class="game-title">Random Game</div>
+            <div class="game-description" id="random-desc">
+              Pick out a random game from our list
+            </div>
+          </a>
+
           <div
             class="game-card coming-soon"
             role="listitem"
